# python-pattern

./: .flake8  .travis.yml  README.md  pyproject.toml
patterns/: __init__.py
patterns/observer/: observer.py  subject.py
tests/: test_observer.py  test_singleton.py  test_smoke.py
