[tool.poetry]
name = "patterns"
version = "0.1.0"
description = ""
authors = ["pen-dev <pelipenkovladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"
yapf = "^0.30.0"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"